JWT ADDED , API Implement >> My Pokemon & Delete Pokemon
